[gd_scene load_steps=18 format=2]

[ext_resource path="res://source/ui/game_ui.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/in_game_ui.tres" type="Theme" id=2]
[ext_resource path="res://assets/dice/dice_icon_small_2.png" type="Texture" id=3]
[ext_resource path="res://assets/dice/dice_icon_small_3.png" type="Texture" id=4]
[ext_resource path="res://assets/dice/dice_icon_small_4.png" type="Texture" id=5]
[ext_resource path="res://assets/dice/dice_icon_small_6.png" type="Texture" id=6]
[ext_resource path="res://assets/dice/dice_icon_small_5.png" type="Texture" id=7]
[ext_resource path="res://assets/dice/dice_icon_small_1.png" type="Texture" id=8]
[ext_resource path="res://assets/dice/dice_icon_medium_1.png" type="Texture" id=9]
[ext_resource path="res://assets/themes/effect_title_dynamic_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/themes/tooltip_dynamic_font.tres" type="DynamicFontData" id=11]
[ext_resource path="res://assets/tiles/terrain_icon_small_rough.png" type="Texture" id=12]
[ext_resource path="res://assets/tiles/terrain_icon_small_green.png" type="Texture" id=13]
[ext_resource path="res://assets/tiles/terrain_icon_small_bunker.png" type="Texture" id=14]
[ext_resource path="res://assets/tiles/terrain_icon_small_fairway.png" type="Texture" id=15]
[ext_resource path="res://assets/tiles/terrain_icon_medium_fairway.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="game_ui" type="CanvasLayer"]
script = ExtResource( 1 )
active_dice_effect_icon = NodePath("ui_elements/dice_effects/dice_effect_columns/active_effect_rows/active_effect_text_columns/active_effect_icon")
active_dice_effect_text = NodePath("ui_elements/dice_effects/dice_effect_columns/active_effect_rows/active_effect_text_columns/active_effect_text")
terrain_effect_icon = NodePath("ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows/terrain_effect_text_columns/terrain_effect_icon")
terrain_effect_text = NodePath("ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows/terrain_effect_text_columns/terrain_effect_text")
score_current = NodePath("ui_elements/score/score_rows/score")
score_best = NodePath("ui_elements/score/score_rows/score_best")
dice_effect_small_icons = NodePath("ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows")
terrain_effect_small_icons = NodePath("ui_elements/terrain_effects/terrain_effect_columns/available_effects/available_effect_rows")

[node name="ui_elements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
theme = ExtResource( 2 )

[node name="dice_effects" type="MarginContainer" parent="ui_elements"]
margin_right = 40.0
margin_bottom = 40.0

[node name="dice_effect_columns" type="HBoxContainer" parent="ui_elements/dice_effects"]
margin_right = 464.0
margin_bottom = 222.0
rect_min_size = Vector2( 300, 0 )

[node name="available_effects" type="Panel" parent="ui_elements/dice_effects/dice_effect_columns"]
margin_right = 42.0
margin_bottom = 222.0
rect_min_size = Vector2( 42, 222 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="available_effect_rows" type="VBoxContainer" parent="ui_elements/dice_effects/dice_effect_columns/available_effects"]
margin_left = 5.0
margin_top = 5.0

[node name="dice1" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="dice2" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 3 )

[node name="dice3" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 4 )

[node name="dice4" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
texture = ExtResource( 5 )

[node name="dice5" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
texture = ExtResource( 7 )

[node name="dice6" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/available_effects/available_effect_rows"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
texture = ExtResource( 6 )

[node name="active_effect_rows" type="VBoxContainer" parent="ui_elements/dice_effects/dice_effect_columns"]
margin_left = 46.0
margin_right = 464.0
margin_bottom = 222.0

[node name="active_effect_title" type="Label" parent="ui_elements/dice_effects/dice_effect_columns/active_effect_rows"]
margin_right = 418.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 10 )
text = "Active Effect"

[node name="active_effect_text_columns" type="HBoxContainer" parent="ui_elements/dice_effects/dice_effect_columns/active_effect_rows"]
margin_top = 48.0
margin_right = 418.0
margin_bottom = 112.0

[node name="active_effect_icon" type="TextureRect" parent="ui_elements/dice_effects/dice_effect_columns/active_effect_rows/active_effect_text_columns"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="active_effect_text" type="Label" parent="ui_elements/dice_effects/dice_effect_columns/active_effect_rows/active_effect_text_columns"]
margin_left = 68.0
margin_top = 16.0
margin_right = 418.0
margin_bottom = 48.0
rect_min_size = Vector2( 350, 0 )
text = "Active Effect Text Active Effect Text"
autowrap = true

[node name="terrain_effects" type="MarginContainer" parent="ui_elements"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -472.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 186.0

[node name="terrain_effect_columns" type="HBoxContainer" parent="ui_elements/terrain_effects"]
margin_right = 472.0
margin_bottom = 186.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 0 )

[node name="terrain_effect_rows" type="VBoxContainer" parent="ui_elements/terrain_effects/terrain_effect_columns"]
margin_right = 418.0
margin_bottom = 186.0

[node name="terrain_effect_title" type="Label" parent="ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows"]
margin_right = 418.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 10 )
text = "Terrain Effect"
align = 2

[node name="terrain_effect_text_columns" type="HBoxContainer" parent="ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows"]
margin_top = 48.0
margin_right = 418.0
margin_bottom = 115.0

[node name="terrain_effect_text" type="Label" parent="ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows/terrain_effect_text_columns"]
margin_right = 350.0
margin_bottom = 67.0
rect_min_size = Vector2( 350, 0 )
text = "Terrain Effect Text Terrain Effect Text"
align = 2
autowrap = true

[node name="terrain_effect_icon" type="TextureRect" parent="ui_elements/terrain_effects/terrain_effect_columns/terrain_effect_rows/terrain_effect_text_columns"]
margin_left = 354.0
margin_right = 418.0
margin_bottom = 67.0
texture = ExtResource( 16 )

[node name="available_effects" type="Panel" parent="ui_elements/terrain_effects/terrain_effect_columns"]
margin_left = 422.0
margin_right = 472.0
margin_bottom = 186.0
rect_min_size = Vector2( 50, 186 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="available_effect_rows" type="VBoxContainer" parent="ui_elements/terrain_effects/terrain_effect_columns/available_effects"]
margin_left = 5.0
margin_top = 5.0

[node name="terrain_green" type="TextureRect" parent="ui_elements/terrain_effects/terrain_effect_columns/available_effects/available_effect_rows"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="terrain_fairway" type="TextureRect" parent="ui_elements/terrain_effects/terrain_effect_columns/available_effects/available_effect_rows"]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 84.0
texture = ExtResource( 15 )

[node name="terrain_rough" type="TextureRect" parent="ui_elements/terrain_effects/terrain_effect_columns/available_effects/available_effect_rows"]
margin_top = 88.0
margin_right = 40.0
margin_bottom = 128.0
texture = ExtResource( 12 )

[node name="terrain_bunker" type="TextureRect" parent="ui_elements/terrain_effects/terrain_effect_columns/available_effects/available_effect_rows"]
margin_top = 132.0
margin_right = 40.0
margin_bottom = 172.0
texture = ExtResource( 14 )

[node name="score" type="MarginContainer" parent="ui_elements"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.5
margin_right = 51.5
margin_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="score_rows" type="VBoxContainer" parent="ui_elements/score"]
margin_left = 5.0
margin_right = 97.0
margin_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="score_title" type="Label" parent="ui_elements/score/score_rows"]
margin_left = 8.0
margin_right = 84.0
margin_bottom = 44.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 10 )
text = "Score"

[node name="hole_number" type="Label" parent="ui_elements/score/score_rows"]
margin_left = 16.0
margin_top = 48.0
margin_right = 76.0
margin_bottom = 80.0
size_flags_horizontal = 4
text = "Hole X"

[node name="score" type="Label" parent="ui_elements/score/score_rows"]
margin_top = 84.0
margin_right = 92.0
margin_bottom = 116.0
size_flags_horizontal = 4
text = "0 Strokes"

[node name="score_best" type="Label" parent="ui_elements/score/score_rows"]
margin_left = 11.0
margin_top = 120.0
margin_right = 81.0
margin_bottom = 144.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "(Best: 00)"
